Fix mobile map layout issues

--- a/src/app/map/map.css
+++ b/src/app/map/map.css
@@ -495,6 +495,7 @@
   }
 
   .filter-dropdown {
+    position: static;
     flex: 1 1 calc(50% - 0.25rem);
   }
 
